--- a/Pickin/appsettings.json
+++ b/Pickin/appsettings.json
@@ -10,12 +10,12 @@
     }
   },
   "EmailSettings": {
-    "MailServer": "plesk4200.is.cc",
-    "MailPort": 25,
+    "MailServer": "smtp.gmail.com",
+    "MailPort": 587,
     "SenderName": "Pickin",
-    "Sender": "info@Pickin.com.ar",
-    "Password": "CR_WD@2020",
-    "EnableSSL": "1" 
+    "Sender": "ivan.barcia@gmail.com",
+    "Password": "Navi9300",
+    "EnableSSL": "1"
   },
   "AllowedHosts": "*"
 }
