--- a/Pickin/Pickin.csproj
+++ b/Pickin/Pickin.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <Folder Include="Data\Migrations\" />
+    <Folder Include="Pages\Admin\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
