--- a/Pickin/appsettings.json
+++ b/Pickin/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(local);Database=aspnet-PortalWeb2;User ID=sa;password=sgmmaster$390;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=(local);Database=aspnet-PortalWeb2;User ID=sa;password=sgmmaster$390;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=66.45.229.50;Database=pickin-db;User ID=pickin-user;password=CR_WD@2020;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
