--- a/Pickin/appsettings.json
+++ b/Pickin/appsettings.json
@@ -11,11 +11,11 @@
     }
   },
   "EmailSettings": {
-    "MailServer": "smtp.gmail.com",
-    "MailPort": 587,
-    "SenderName": "Pickin",
-    "Sender": "ivan.barcia@gmail.com",
-    "Password": "Navi9300",
+    "MailServer": "plesk4600.is.cc",
+    "MailPort": 25,
+    "SenderName": "pickin.ar",
+    "Sender": "info@pickin.ar",
+    "Password": "CR_WD@2020",
     "EnableSSL": "1"
   },
   "AllowedHosts": "*"
